@@ -9,6 +9,7 @@ import com.food.ordering.system.domain.valueobject.*;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public class Order extends AggregateRoot<OrderId> {
 
@@ -17,6 +18,8 @@ public class Order extends AggregateRoot<OrderId> {
     private final StreetAddress streetAddress;
     private final Money price;
     private final List<OrderItem> items;
+
+    public static final String FAILURE_MESSAGE_DELIMITER = ",";
 
 
 
@@ -73,7 +76,7 @@ public class Order extends AggregateRoot<OrderId> {
     private void updateFailureMessages(List<String> failureMessages) {
         if (this.failureMessages != null && failureMessages != null) {
             this.failureMessages.addAll(failureMessages.stream()
-                    .filter(message -> !message.isEmpty()).toList());
+                    .filter(message -> !message.isEmpty()).collect(Collectors.toList()));
         }
         if(this.failureMessages == null) {
             this.failureMessages = failureMessages;
